# DeeFuse

./: .gitignore  README.md  pyproject.toml  run_deefuse.py
.github/workflows/: build.yml
src/deefuse/: __init__.py  __main__.py  config.py  deezer_api.py  downloader.py  settings.py  utils.py
src/deefuse/ui/: __init__.py  main_window.py  settings_window.py
