[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deefuse"                       # PyPI name
version = "0.1.0"
description = "Deemix library upgrader, automatically matching local files"
requires-python = ">=3.9"
authors = [{ name = "Mitchell Winter", email = "mitchell.winter@queensu.ca" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Win32 (MS Windows)",
  "Environment :: MacOS X",
  "Environment :: X11 Applications",
  "Topic :: Multimedia :: Sound/Audio :: Players",
]

dependencies = [
  "customtkinter>=5.1",
  "mutagen>=1.47",
  "requests>=2.31",
]

[project.scripts]
deefuse = "deefuse.__main__:main"
